Thu May  2 15:45:34 2002  Ossama Othman  <ossama@uci.edu>

	* tests/Dev_Poll_Reactor_Test.cpp:

	  New one-button test for the Dev_Poll_Reactor.  Currently it is
	  fairly simple.  Improvements to be added soon.

Thu May  2 15:22:36 2002  Ossama Othman  <ossama@uci.edu>

	* ace/Dev_Poll_Reactor.h (work_pending_i):
	* ace/Dev_Poll_Reactor.cpp (work_pending_i):

	  Accept a pointer to ACE_Time_Value instead of a reference.

	  Corrected the logic for the test for pending timers.

Thu May 02 14:38:53 2002  Ossama Othman  <ossama@uci.edu>

	* examples/Reactor/Misc/pingpong.cpp:

	  Include "ACE.h" to pull in methods in the ACE class/namespace.

Thu May  2 14:02:20 2002  Ossama Othman  <ossama@uci.edu>

	* ace/Dev_Poll_Reactor.cpp (work_pending_i):

	  Take into account pending timers when deciding if there is work
	  to be done.

Thu May 02 13:34:08 2002  Ossama Othman  <ossama@uci.edu>

	* ace/Dev_Poll_Reactor.cpp:

	  Include "ACE.h" to pull in methods in the ACE class/namespace.

Thu May  2 13:28:01 2002  Ossama Othman  <ossama@uci.edu>

	* ace/Dev_Poll_Reactor.h:

	  Updated some documentation.

	* ace/Dev_Poll_Reactor.inl (upcall):

	  New method containing common upcall operations for all types of
	  IO events.

	* ace/Dev_Poll_Reactor.cpp:

	  Commented out "ready set" code since the upcall will simply loop
	  until the event handler no longer desires callbacks.  This is
	  okay since multiple threads may dispatch event handlers (similar
	  to what the TP_Reactor does).

	  (close):

	  Cleaned up memory and resource leaks.

	  (handle_events_i, work_pending_i):

	  Moved "event polling" code to the new work_pending_i() method.
	  handle_events_i() now calls that method to determine if any
	  events must be dispatched.

	  If the underlying ioctl() call was interrupted (e.g. via the
	  INTR signal), i.e. returns -1 with errno set to EINTR, then
	  automatically restart the event loop if so desired by the user.

	  (work_pending):
